[package]
name = "wla"
version = "0.2.4"
edition = "2021"
authors = ["sts10 <sschlinkert@gmail.com>"]
license = "MIT"
readme = "readme.markdown"
repository = "https://github.com/sts10/wla"
description = "Audit word lists"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.9.0"
unicode-segmentation = "1.11.0"
unicode-normalization = "0.1.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
